--- a/index.html
+++ b/index.html
@@ -2,54 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
-    />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta
-      name="apple-mobile-web-app-status-bar-style"
-      content="black-translucent"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>AR met Externe 3D Modellen</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    <style>
-      #startButton {
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 10000;
-        padding: 20px 40px;
-        font-size: 18px;
-        background: #4a90e2;
-        color: white;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-        font-family: Arial;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-      }
-      #startButton:active {
-        background: #357abd;
-      }
-      .hidden {
-        display: none !important;
-      }
-    </style>
   </head>
   <body style="margin: 0; overflow: hidden">
-    <!-- Start button voor iOS camera permissions -->
-    <button id="startButton">Start AR Experience</button>
     <a-scene
-      id="arScene"
-      class="hidden"
       embedded
-      arjs="sourceType: webcam; debugUIEnabled: false; videoTexture: true;"
+      arjs="sourceType: webcam; debugUIEnabled: false;"
       vr-mode-ui="enabled: false"
-      renderer="logarithmicDepthBuffer: true; precision: medium;"
-      device-orientation-permission-ui="enabled: false"
     >
       <!-- Preload 3D modellen (optioneel, voor betere performance) -->
       <a-assets>
@@ -182,60 +144,5 @@
         >
       </p>
     </div>
-
-    <script>
-      // iOS camera access handler
-      document
-        .getElementById("startButton")
-        .addEventListener("click", async function () {
-          const button = this;
-          const scene = document.getElementById("arScene");
-
-          try {
-            // Request camera permission explicitly (required for iOS)
-            const stream = await navigator.mediaDevices.getUserMedia({
-              video: {
-                facingMode: "environment",
-                width: { ideal: 1280 },
-                height: { ideal: 720 },
-              },
-            });
-
-            // Stop the test stream
-            stream.getTracks().forEach((track) => track.stop());
-
-            // Hide button and show AR scene
-            button.classList.add("hidden");
-            scene.classList.remove("hidden");
-
-            // Initialize AR.js
-            scene.setAttribute(
-              "arjs",
-              "sourceType: webcam; debugUIEnabled: false; videoTexture: true;"
-            );
-          } catch (error) {
-            console.error("Camera access denied:", error);
-            button.textContent =
-              "Camera toegang geweigerd - herlaad en probeer opnieuw";
-            button.style.background = "#E74C3C";
-
-            // Show error details for debugging
-            setTimeout(() => {
-              alert(
-                "Zorg ervoor dat:\n1. Je toestemming geeft voor camera\n2. De pagina via HTTPS wordt geladen\n3. Je browser camera toegang toestaat\n\nFout: " +
-                  error.message
-              );
-            }, 500);
-          }
-        });
-
-      // Check if camera is available on page load
-      if (!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia) {
-        document.getElementById("startButton").textContent =
-          "Camera niet beschikbaar";
-        document.getElementById("startButton").style.background = "#95A5A6";
-        document.getElementById("startButton").disabled = true;
-      }
-    </script>
   </body>
 </html>
